<resources>
    <string name="app_name">Play Android</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
    <string name="name">Edward</string>
    <string name="searchessay">搜索文章</string>
    <string name="search">搜索</string>
    <string name="register">注册</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="repassword">确认密码</string>
    <string name="rememberpass">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="tologin">点击注册</string>
</resources>
