<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_register">

    <View
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="60dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/username"
            android:textSize="18sp"
            android:layout_marginStart="60dp"/>

    <EditText
            android:id="@+id/edt_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:maxLines="1" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textSize="18sp"
            android:layout_marginStart="60dp"/>

    <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:maxLines="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ckb_rememberpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:buttonTint="@color/colorLightGray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/rememberpass"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/ckb_autologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/colorLightGray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/autologin"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/colorBlue1"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btn_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tologin"
        android:layout_gravity="center"
        android:textColor="@color/colorDarkGray"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>