<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_register"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="26sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:layout_marginStart="60dp"/>

    <EditText
        android:id="@+id/edt_regi_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:layout_marginStart="60dp"/>

    <EditText
        android:id="@+id/edt_regi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:maxLines="1"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/repassword"
            android:textSize="18sp"
            android:layout_marginStart="60dp"/>

    <EditText
            android:id="@+id/edt_regi_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:maxLines="1"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/colorBlue1"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

</LinearLayout>